stderr.log
   Compiling fm v0.1.0 (/home/quentin/gclem/dev/rust/fm)
error[E0061]: this function takes 6 arguments but 4 arguments were supplied
   --> src/main.rs:527:22
    |
527 |     let mut status = Status::new(term, path_content, args, colors);
    |                      ^^^^^^^^^^^---------------------------------- two arguments of type `String` and `String` are missing
    |
note: associated function defined here
   --> src/main.rs:193:8
    |
193 |     fn new(
    |        ^^^
194 |         term: Term<()>,
    |         --------------
195 |         path_content: PathContent,
    |         -------------------------
196 |         args: Config,
    |         ------------
197 |         colors: Colors,
    |         --------------
198 |         terminal: String,
    |         ----------------
199 |         opener: String,
    |         --------------
help: provide the arguments
    |
527 |     let mut status = Status::new(term, path_content, args, colors, /* String */, /* String */);
    |                      ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

For more information about this error, try `rustc --explain E0061`.
error: could not compile `fm` due to previous error
